<resources>
    <string name="app_name">TFM</string>
    <string name="nombreVehiculo">Nombre</string>
    <string name="hintMarca">Nombre marca</string>
    <string name="matricula">Matricula</string>
    <string name="hintModelo">Nombre modelo</string>
    <string name="modeloHint">Modelo</string>
    <string name="hintMatricula">Matricula</string>
    <string name="kilometraje">Kilometraje</string>
    <string name="kilometrajeHint">Kms</string>
    <string name="combustibleHint">Tipo de combustible</string>
    <string name="combustible">Combustible</string>
    <string name="cilindrada">Cilindrada</string>
    <string name="hintCilindrada">Cilindrada</string>
    <string name="color">Color</string>
    <string name="potencia">Potencia</string>
    <string name="hintPotencia">Potencia</string>
    <string name="anho">Año</string>
    <string name="hintAnho">Año</string>
    <string name="action_add_vehiculo">Añadir vehículo</string>
    <string name="action_settings">Opciones</string>
    <string name="action_modify_vehiculo">Modificar vehículo</string>
    <string name="titulo_color_picker">Selector de color</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="action_remove_vehicle">Eliminar</string>
    <string name="nombre_mantenimiento">Nombre</string>
    <string name="descripcionMantenimiento">Descripción</string>
    <string name="kilometrosMantenimiento">Kilometraje</string>
    <string name="action_add_mantenimiento">Añadir</string>
    <string name="action_remove_mantenimiento">Eliminar</string>
    <string name="editTextFechaMantenimiento">Fecha</string>
    <string name="ilegalArgument">Uri no soportada</string>
    <string name="marca">Marca</string>
    <string name="error_marca_vacio">Por favor introduce una marca para tu nuevo vehiculo</string>
    <string name="error_modelo_vacio">Por favor introduce un modelo para tu nuevo vehiculo</string>
    <string name="error_kilometraje_vacio">Por favor introduce el valor del kilometraje para tu nuevo vehiculo</string>
    <string name="tituloDescripcion">Descripcion</string>
    <string name="error_descripcion_vacia">Por favor introduce una descripción del nuevo mantenimiento</string>
    <string name="error_nombre_mantenimiento_vacio">Por favor introduce un nombre para el mantenimiento</string>
    <string name="error_kilometraje_vacio_mantenimiento">Por favor introduce un kilometraje para programar el mantenimiento</string>
    <string name="tituloReparacionItem">Pieza o reparación</string>
    <string name="tituloDescripcionReparacionItem">Descripción</string>
    <string name="tituloPrecioReparacionItem">Precio</string>
    <string name="tituloReferenciaReparacionItem">Referencia de pieza</string>
    <string name="coste_total">Coste de la reparación: </string>
    <string name="divisa"> €</string>
    <string name="textViewReparacion">Pieza o reparación</string>
    <string name="textVievDescripcionReparacion">Descripción</string>
    <string name="textViewReferencia">Referencia de pieza</string>
    <string name="textViewPrecio">Precio</string>
    <string name="error_nombre_reparacion_vacio">Por favor introduce un nombre en la reparación</string>
    <string name="error_descripcion_reparacion_vacia">Por favor introduce una breve descripcion de la reparación</string>
    <string name="error_precio_vacio">Por favor introduce un precio para la reparación</string>
    <string name="dialog_message">Mantenimientos pendientes para reparar</string>
    <string name="ok">Actualizar</string>
    <string name="notificacion">Se te notificará  el</string>
    <string name="empty_vehiculos">Vaya! Tu garaje está vacio. \n Pulsa el botón de añadir para comenzar a usarlo.</string>
    <string name="empty_mantenimientos">Aún no has creado ningún mantenimiento para este vehículo. \n Pulsa el botón de añadir para planificar uno nuevo</string>
    <string name="empty_reparaciones">Aún no has realizado este mantenimiento. \n Pulsa el botón de añadir para agregar una nueva reparacion.</string>
    <string name="titulo_toolbar_vehiculos_activity">Vehículos</string>
    <string name="titulo_toolbar_mantenimientos_activity">Mantenimientos</string>
    <string name="titulo_toolbar_gestion_vehiculos_activity">Vehículo</string>
    <string name="faltan">(Faltan</string>
    <string name="pasado">(La reparación se ha retrasado</string>
    <string name="action_reparar">Reparar</string>
    <string name="titulo_toolbar_reparaciones_activity">Reparaciones</string>
    <string name="titulo_toolbar_gestion_reparaciones_activity">Reparación</string>
    <string name="titulo_toolbar_gestion_mantenimientos_activity">Mantenimiento</string>
    <string name="action_modify_mantenimiento">Modificar</string>
    <string name="error_descripcion_mantenimiento_vacio">Por favor introduce una descripción para el mantenimiento</string>
    <string name="mantenimiento_no_creado">Por favor guarda primero el mantenimiento</string>
    <string name="action_modify_reparacion">Modificar</string>
    <string name="hintDescripcionReparacion">Descripción de la reparación</string>
    <string name="nombre_reparacion">Nombre de la reparación</string>
    <string name="referencia">REF1234</string>
    <string name="precioReparacion">Precio de la reparación</string>
    <string name="fecha">Fecha</string>
    <string name="dias">días)</string>
    <string name="han_pasado">(Han pasado</string>
    <string name="restrasado">(El mantenimiento se ha retrasado</string>
    <string name="vehiculo_no_creado">Por favor guarde el vehículo primero</string>
    <string name="titulo_dialog">Mantenimientos pendientes</string>
    <string name="dialog_message_parte2">pendientes de actualizar.</string>
    <string name="actualizar_KM">¿Deseas actualizar el kilometraje ahora?</string>
    <string name="ultimosMantenimientos">Últimos mantenimientos</string>
    <string name="empty_mantenimientos_fragment">No hay ningún mantenimiento pendiente</string>
    <string name="action_informe_gastos_vehicle">Ver informe de gastos</string>
    <string name="empty_informes">No se han encontrado gastos para este vehiculo</string>
    <string name="fechaInicio">Fecha de inicio</string>
    <string name="titulo_toolbar_informes_activity">Informe de gastos</string>
    <string name="tituloFechaFin">Fecha fin</string>
    <string name="costeMantenimiento">Coste del mantenimiento</string>
    <string name="coste_total_informe">Gastado en mantenimientos</string>
    <string name="alertSI">¿Actualizar el kilometraje al acceder a la información de un vehículo?</string>
    <string name="alertSISummary">Si activa esta opción se le pedirá que actualize la información del kilometraje</string>
    <string name="toolbarPreferences">Preferencias</string>
    <string name="measure_unit">Unidad de medida</string>
    <string name="measure_unit_summary">Estable la unidad de medida</string>
    <string name="horaNotificacion">Hora de las notificaciones</string>
    <string name="hora">Hora</string>
    <string name="minuto">Minuto</string>
    <string name="textViewTaller">Taller</string>
    <string name="taller">Taller</string>
    <string name="titulo_dialog_opinion">¿Compartir tu experiencia con otros usuarios?</string>
    <string name="tituloOpinion">Comentario</string>
    <string name="titulo_valoracion">Valoración</string>
    <string name="valorar">Valorar</string>
    <string name="comentarion_hint">Comentario</string>
    <string name="upload_succes">¡Gracias por su opinión!</string>
    <string name="upload_fail">Se ha producido un error</string>
    <string name="no_network">No tienes conexión a internet</string>
    <string name="empty_Opiniones">No se han encontrado opiniones de otros usuarios que coincidan con su busqueda.</string>
    <string name="titulo_toolbar_buscar_opiniones_activity">Buscar opiniones</string>
    <string name="action_opiniones">Buscar opiniones de otros usuarios</string>
    <string name="no_results">No se ha encontrado nada.</string>
    <string name="gastado">Gastado</string>
    <string name="alertComentar">Comentarios</string>
    <string name="alertComentarSummary">Si activa esta opción se le preguntará su opinión cuando se haga una reparación</string>
</resources>
