<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- opcion de nueva reparacion -->
    <item
        android:id="@+id/action_nueva_reparacion"
        android:icon="@drawable/ic_check_black_24dp"
        android:title="@string/action_add_mantenimiento"
        app:showAsAction="always"/>

    <!-- opcion de modificar -->
    <item
        android:id="@+id/action_modify_reparacion"
        android:title="@string/action_modify_reparacion"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        app:showAsAction="always"/>

    <!-- eliminar reparacion -->
    <item
        android:id="@+id/action_remove_reparacion"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_remove_vehicle"
        app:showAsAction="always"/>
</menu>