<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- opcion de anhadir -->
    <item
        android:id="@+id/action_save_mantenimiento"
        android:icon="@drawable/ic_check_black_24dp"
        android:title="@string/action_add_mantenimiento"
        app:showAsAction="always"/>

    <!-- opcion de modificar -->
    <item
        android:id="@+id/action_modify_mantenimiento"
        android:title="@string/action_modify_mantenimiento"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        app:showAsAction="always"/>

    <!-- opcion de eliminar -->
    <item
        android:id="@+id/action_remove_mantenimiento"
        android:title="@string/action_remove_mantenimiento"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="always"/>
</menu>