<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="es.uvigo.esei.bgcastro.tfm.activitys.GestionVehiculosActivity"
    android:orientation="vertical"
    android:id="@+id/layoutGestion">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarGestionVehiculos"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layoutSuperiorGestion"
        android:layout_below="@+id/toolbarGestionVehiculos"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:weightSum="2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imagenGestionVehiculos"
            android:layout_weight="1"
            android:src="@drawable/ic_directions_car_black_48dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:id="@+id/marca" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextMarca"
                android:hint="@string/hintMarca"
                android:background="@android:color/transparent"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modelo"
                android:id="@+id/modelo" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextModelo"
                android:selectAllOnFocus="false"
                android:hint="@string/hintModelo"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matricula"
                android:id="@+id/Matricula"
                android:hint="@string/modeloHint" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextMatricula"
                android:hint="@string/hintMatricula"
                android:inputType="textCapCharacters|text" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_kilometraje"
        android:layout_below="@+id/layoutSuperiorGestion"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:weightSum="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilometraje"
            android:id="@+id/kilometraje"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextKilometraje"
            android:layout_weight="3"
            android:hint="@string/kilometrajeHint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_gasolina"
        android:layout_below="@+id/layout_kilometraje"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:weightSum="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/combustible"
            android:id="@+id/combustible"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/tipoCombustible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_cilindrada"
        android:layout_below="@+id/layout_gasolina"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:weightSum="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cilindrada"
            android:id="@+id/cilindrada"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextCilindrada"
            android:layout_weight="3"
            android:hint="@string/hintCilindrada"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_color"
        android:layout_below="@+id/layout_cilindrada"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:weightSum="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:id="@+id/color"
            android:layout_weight="1" />

        <SurfaceView
            android:id="@+id/selectorDeColor"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@android:color/background_dark"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_potencia"
        android:layout_below="@+id/layout_color"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:weightSum="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/potencia"
            android:id="@+id/potencia"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPotencia"
            android:layout_weight="3"
            android:hint="@string/hintPotencia"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_anho"
        android:layout_below="@+id/layout_potencia"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:weightSum="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anho"
            android:id="@+id/anho"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextAnho"
            android:layout_weight="3"
            android:hint="@string/hintAnho"
            android:inputType="number" />
    </LinearLayout>

</RelativeLayout>
