<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarGestionMantenimientos"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/nombreMantenimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarGestionMantenimientos"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="10dp"
        android:text="@string/nombre_mantenimiento"
        android:theme="@style/vehiculo_bold"/>

    <EditText
        android:id="@+id/editTextNombreMantenimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombreMantenimiento"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="10dp"
        android:theme="@style/vehiculo_regular"/>

    <TextView
        android:id="@+id/descripcionMantenimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNombreMantenimiento"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/descripcionMantenimiento"
        android:layout_marginBottom="10dp"
        android:theme="@style/vehiculo_bold"/>

    <EditText
        android:id="@+id/editTextDescripcionMantenimiento"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:ems="10"
        android:layout_below="@+id/descripcionMantenimiento"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="15dp"
        android:inputType="textMultiLine"
        android:theme="@style/vehiculo_regular"/>

    <TextView
        android:id="@+id/kilometrajeMantenimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDescripcionMantenimiento"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="10dp"
        android:numeric="integer"
        android:text="@string/kilometrosMantenimiento"
        android:theme="@style/vehiculo_bold"/>

    <EditText
        android:id="@+id/editTextKilometrajeMantenimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kilometrajeMantenimiento"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="10dp"
        android:inputType="number"
        android:theme="@style/vehiculo_regular"/>

    <TextView
        android:id="@+id/editTextFechaMantenimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextKilometrajeMantenimiento"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/editTextFechaMantenimiento"
        android:theme="@style/vehiculo_bold"/>

    <TextView
        android:id="@+id/fechaMantenimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextFechaMantenimiento"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:theme="@style/vehiculo_regular"/>

</RelativeLayout>
